az-cli/aks/deployments/ingress/linux/one-be/k8s-upper-1.23/with-public-ip/hello-world-ingress-with-hostName.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "foo.com"
    http:
      paths:
      - path: /hello-world-one(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: aks-helloworld
          servicePort: 80
      - path: /hello-world-two(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: ingress-demo
          servicePort: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          serviceName: aks-helloworld
          servicePort: 80
